--- a/css/style.css
+++ b/css/style.css
@@ -156,13 +156,14 @@ li a{
 .bt{
     cursor: pointer;
 }
-.brands{
+#brands{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-top: 150px;
+    margin-top: 100px;
+    margin-bottom: 50px;
     background-color: #141516;
 }
 
