--- a/css/style.css
+++ b/css/style.css
@@ -284,3 +284,93 @@ li a{
     letter-spacing: -0.04em;
     color: rgba(255, 255, 255, 0.4);
 }
+#content4{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 90%;
+}
+
+.c4-1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.c4-1 h2{
+    font-family: 'Gilroy-SemiBold';
+    font-size: 42px;
+    line-height: 50px;
+    /* identical to box height, or 119% */
+    color: #FFFFFF;
+}
+
+.c4-1pa{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 26px;
+    /* identical to box height, or 144% */
+    text-align: center;
+    letter-spacing: -0.04em;
+    margin-bottom: 65px;
+}
+
+.c4-2{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 80px;
+}
+
+.c4-1-b{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 791px;
+    align-items: center;
+    padding: 40px 0;
+    background: #161717;
+    border-radius: 20px;
+    margin-bottom: 53px;
+}
+.c4-1-b img{
+    background: #72B218;
+    padding: 10px;
+    border-radius: 50%;
+    align-items: center;
+}
+.c4-1-b2{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* width: 791px; */
+    margin-left: 20px;
+}
+.c4-1-b2 h2{
+    font-family: 'Gilroy-SemiBold';
+    font-size: 24px;
+    line-height: 20px;
+    /* identical to box height, or 83% */
+
+
+    color: #FFFFFF;
+
+}
+.c4-1-b2 p{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 17px;
+    margin-top: 10px;
+    /* identical to box height, or 94% */
+
+    letter-spacing: -0.05em;
+
+    color: rgba(255, 255, 255, 0.25);
+
+}
