--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ li a{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 80%;
     margin: 0 auto;
     margin-top: 90px;
@@ -172,12 +172,14 @@ li a{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin: 0 auto;
     width: 80%;
     padding: 32px 0;
 }
-
+.brands-logo img{
+    margin-left: 57px;
+}
 .c1p::after
 {
     content: "";
@@ -234,7 +236,7 @@ li a{
 #content3{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin: 0 auto;
     width: 90%;
@@ -245,6 +247,7 @@ li a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-left: 50px;
     width: 432px;
     height: 348px;
     background: #161717;
