--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    /* width: fit-content; */
+    width: fit-content;
 }
 
 header {
@@ -376,4 +376,57 @@ li a{
 
     color: rgba(255, 255, 255, 0.25);
 
+}
+
+#content5{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    height: 328px;
+    background: linear-gradient(94.06deg, #54730B 0%, #9DC213 101.22%);
+    border-radius: 26px;
+    padding: 0 87px;
+    margin: auto;
+    margin-top: 180px;
+}
+
+.text5{
+    align-items: center;
+    justify-content: center;
+    width: 460px;
+}
+.text5 h2{
+    display: inline;
+    font-family: 'Gilroy-SemiBold';
+    font-size: 40px;
+    line-height: 47px;
+    color: #FFFFFF;
+    font-weight: 500;
+}
+#text5ed{
+    font-weight: 900;
+}
+
+.button5{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 198px;
+    height: 65px;
+    border: 1.5px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+}
+
+.button5 h3{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    margin-right: 5px;
+    align-items: center;
+    color: #FFFFFF;
 }
