--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,7 @@ li a{
     justify-content: center;
     margin: 0 auto;
     width: 90%;
+    margin-top: 150px;
 }
 
 .c4-1{
@@ -390,6 +391,7 @@ li a{
     padding: 0 87px;
     margin: auto;
     margin-top: 180px;
+    margin-bottom: 124px;
 }
 
 .text5{
@@ -429,4 +431,41 @@ li a{
     margin-right: 5px;
     align-items: center;
     color: #FFFFFF;
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 50px;
+}
+
+footer hr{
+    width: 100%;
+    height: 1px;
+    background-color: #414242;
+    border-radius: 5px;
+    border-style :none;
+    margin-bottom: 25px;
+}
+.footerl{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 90%;
+    justify-content: space-between;
+    margin-bottom: 84px;
+}
+
+.footerl p{
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+    text-align: right;
+    color: #414242;
 }
