--- a/css/media-q1.css
+++ b/css/media-q1.css
@@ -8,7 +8,7 @@
         font-size: 40px;
     }
     .brands-logo img {
-        margin-left: 26px;
+        /* margin-left: 26px; */
     }
 }
 
@@ -28,14 +28,14 @@
         font-size: 33px;
     }
     .brands-logo img {
-        margin-left: 13px;
+        /* margin-left: 13px; */
     }
     .c4-2{
         position: relative;
         top: 110px;
     }
     .brands-logo img {
-        margin-left: 13px;
+        /* margin-left: 13px; */
     }
 
 }
@@ -59,6 +59,9 @@
     }
     .c4-1{
         align-items: center;
+    }
+    ul{
+        display: flex;
     }
 }
 
@@ -145,6 +148,9 @@
         position: absolute;
         top: 87px;
         margin: auto;
+        /* align-items: center;
+        width: 70vw;
+        text-align: center; */
     }
     .footerl p {
         font-size: 14px;
@@ -205,6 +211,9 @@
         font-size: 7px;
         margin-left: 13px;
     }
+    .c1p {
+        margin-bottom: 19px;
+    }
     .gets {
         width: 100px;
         font-size: 7px;
@@ -217,6 +226,9 @@
     }
     #content2 h2 {
         font-size: 20px;
+    }
+    .c2 img {
+        width: 95%;
     }
 }
 
@@ -232,11 +244,11 @@
         font-size: 10px;
     }
     .c1 h1 {
-        font-size: 20px;
-        line-height: 25px;
+        font-size: 13px;
+        line-height: 2px;
     }
     .c1 h2 {
-        font-size: 15px;
+        font-size: 10px;
     }
     .imgcash {
         left: calc(48%);
@@ -245,12 +257,41 @@
         bottom: -5px;
         left: calc(5% - 20px);
     }
+    #content2 h2 {
+        font-size: 15px;
+    }
+    .gets {
+        width: 53px;
+        height: 30px;
+        font-size: 6px;
+    }
+    .lears {
+        width: 53px;
+        height: 30px;
+        margin-left: 10px;
+        font-size: 6px;
+        line-height: 9px;
+    }
+    .lears img{
+        display: none;
+    }
+    .lears p {
+        margin-right: 0px;
+    }
+    .c4-1pa{
+        font-size: 15px;
+    }
 }
 
-@media (max-width: 373px)
+@media (max-width: 402px)
 {
     li a{
-        font-size: 12px;
+        font-size: 8px;
+    }
+    .button-g {
+        font-size: 8px;
+        width: 83px;
+        height: 35px;
     }
 }
 
