--- a/css/media-q1.css
+++ b/css/media-q1.css
@@ -10,6 +10,9 @@
     .brands-logo img {
         /* margin-left: 26px; */
     }
+    .container{
+        background-image: none;
+    }
 }
 
 @media (max-width: 1266px)
