--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ body {
     flex-direction: column;
     margin: 0 auto;
     width: fit-content;
+    background-image: url(../resource/background.png);
+    background-repeat: no-repeat;
 }
 
 header {
