--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,18 @@ body {
     flex-direction: column;
     margin: 0 auto;
     width: fit-content;
-    background-image: url(../resource/background.png);
-    background-repeat: no-repeat;
 }
 
+.backround-c
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: auto;
+    background-image: url(../resource/background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 header {
     display: flex;
     flex-direction: row;
