--- a/css/media-q1.css
+++ b/css/media-q1.css
@@ -277,6 +277,11 @@
         height: 30px;
         font-size: 6px;
     }
+    .cash::after {
+        bottom: 31px;
+        width: 230%;
+        left: calc(-70%);
+    }
     .lears {
         width: 53px;
         height: 30px;
